--- a/RiskSuite/Client/wwwroot/index.html
+++ b/RiskSuite/Client/wwwroot/index.html
@@ -27,7 +27,8 @@
     </div>
     <script src="js/toastr.min.js"></script>
     <script src="js/common.js"></script>
-    <!--<script src="js/all.min.js"></script>-->
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
