--- a/RiskSuite/Client/wwwroot/index.html
+++ b/RiskSuite/Client/wwwroot/index.html
@@ -10,7 +10,7 @@
     <!--<link href="css/all.min.css" rel="stylesheet">-->
     <link href="css/app.css" rel="stylesheet" />
     <link href="RiskSuite.Client.styles.css" rel="stylesheet" />
-    <link href="css/toastr.min.css" rel="stylesheet" />
+    <link href="css/toastr.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -25,9 +25,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/toastr.min.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
