--- a/RiskSuite/Client/wwwroot/index.html
+++ b/RiskSuite/Client/wwwroot/index.html
@@ -28,6 +28,7 @@
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/common.js"></script>
     <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
